--- a/app/views/entities/show.html.haml
+++ b/app/views/entities/show.html.haml
@@ -61,7 +61,7 @@
 -#           = link_to "Modifier", edit_proposal_path(proposal), :class => 'btn btn-mini'
 -#           = link_to "Supprimer", proposal_path(proposal), :method => :delete, :data => { :confirm => "Êtes-vous sûr ?" }, :class => 'btn btn-mini btn-danger'
 
-%h2 Collaborateurs proposés à DRI
+%h2 Collaborateurs de l'entité
 %table.table.table-striped
   %thead
     %tr
