--- a/app/views/proposals/index.html.haml
+++ b/app/views/proposals/index.html.haml
@@ -53,7 +53,7 @@
       = f.input :prenom, label: "Prénom"
       = f.input :id_karma
       = f.input :profil
-      = f.input :role, label: "Rôle", collection: ["admin", "consultant", "manager", "manager_dri", "resp_domaine", "staffeur"]
+      = f.input :role, label: "Rôle", collection: ["admin", "consultant", "manager_dri", "manager_dvt", "resp_domaine", "staffeur"]
       = f.input :email, placeholder: "prénom.nom@devoteam.com"
       = f.input :eligibilite, collection: ["éligible", "éligible-conditionnelle", "non-éligible"]
       = f.input :etat, collection: ["actif", "inactif"]
