--- a/app/views/entities/creer_propositions.html.haml
+++ b/app/views/entities/creer_propositions.html.haml
@@ -2,7 +2,8 @@
   %h1 
     Propositions de l'entité
     = @entity.name
-    = Time.now.next_week.strftime("S%W %Y")
+    = Time.now.next_week.next_week.strftime("S%W %Y")
+    = Time.now.next_week.strftime(", Date : %d/%m/%Y")
 
 %table.table.table-striped.table-condensed.minimiser.well
   %caption
