--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -66,8 +66,8 @@
                   %li= link_to "Gérer les affectations", affectations_path
                 - if can? :confirmation_affectations, Proposal
                   %li= link_to "Confirmer les arrivées", confirmations_path
-                - if can? :envoyer_codes_imputation, :all
-                  %li= link_to "Publipostage", envoyer_codes_proposals_path, data: {confirm: "Êtes-vous sûr de vouloir envoyer les codes Aramis ?"}
+                -# - if can? :envoyer_codes_imputation, :all
+                -#   %li= link_to "Publipostage", envoyer_codes_proposals_path, data: {confirm: "Êtes-vous sûr de vouloir envoyer les codes Aramis ?"}
                 - if can? :envoyer_rapport_hebdomadaire, :all
                   %li= link_to "Reporting", envoyer_reportings_entities_path, data: {confirm: "Êtes-vous sûr de vouloir envoyer les reportings de la semaine ?"}
         - if collaborator_signed_in?
