--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -1,8 +1,13 @@
+- @consultants_presents = []
+- propositions_presentes = Proposal.where(etat: "arrivée", date: Time.now.all_week)
+- propositions_presentes.each do |proposition|
+  - @consultants_presents << proposition.consultant
+
 = simple_form_for @project, :html => { :class => 'form-horizontal' } do |f|
   = f.input       :name, label: "Nom"
   = f.association :domain, label: "Domaine", prompt: "Sélectionner le domaine"
-  = f.association :chef, collection: Collaborator.consultants.actifs, prompt: "Sélectionner un collaborateur"
-  = f.association :maitrise_ouvrage, label: "Maître d'ouvrage", collection: Collaborator.consultants.actifs, prompt: "Sélectionner un collaborateur"
+  = f.association :chef, collection: @consultants_presents, prompt: "Sélectionner un collaborateur"
+  = f.association :maitrise_ouvrage, label: "Maître d'ouvrage", collection: Collaborator.actifs, prompt: "Sélectionner un collaborateur"
   = f.input       :code
   = f.input       :etat, collection: ["activé", "désactivé"]
   = f.input       :description
